--- a/static/css/junebug.css
+++ b/static/css/junebug.css
@@ -188,7 +188,7 @@ button {
     background-color: #333;
     border: 0px;
     padding: 5px;
-    color: #ff0;
+    color: #a5c261;
     outline: none;
 }
 
